Fixes #1005221: T-shirt tooltip does not display on iOS transition removed from visibility css property. made tooltip thinner to fit on iOS. all transitions are faster. prevent default touch event

--- a/mozillians/static/mozillians/css/main.less
+++ b/mozillians/static/mozillians/css/main.less
@@ -1453,11 +1453,10 @@ form {
                 position: relative;
                 display: inline;
                 span {
-                    padding: 5px 15px;
+                    padding: 5px 10px;
                     opacity: 0;
                     visibility: hidden;
-                    width: 200px;
-                    z-index: 10;
+                    width: 150px;
                     position: absolute;
                     top: -5px;
                     left: 0px;
@@ -1467,17 +1466,17 @@ form {
                     .box-shadow(2px 2px 2px @gray);
                     border: 1px solid lighten(@black,90%);
                     text-align: center;
-                    -webkit-transition-property:opacity, margin-left, visibility, margin-left;
-                    -webkit-transition-duration:0.4s, 0.3s, 0.4s, 0.3s;
+                    -webkit-transition-property:opacity, margin-left, margin-left;
+                    -webkit-transition-duration:0.1s;
                     -webkit-transition-timing-function: ease-in-out;
-                    -moz-transition-property:opacity, margin-left, visibility, margin-left;
-                    -moz-transition-duration:0.4s, 0.3s, 0.4s, 0.3s;
+                    -moz-transition-property:opacity, margin-left, margin-left;
+                    -moz-transition-duration:0.1s;
                     -moz-transition-timing-function: ease-in-out;
-                    -o-transition-property:opacity, margin-left, visibility, margin-left;
-                    -o-transition-duration:0.4s, 0.3s, 0.4s, 0.3s;
+                    -o-transition-property:opacity, margin-left, margin-left;
+                    -o-transition-duration:0.1s;
                     -o-transition-timing-function: ease-in-out;
-                    transition-property:opacity, margin-left, visibility, margin-left;
-                    transition-duration:0.4s 0.3s;
+                    transition-property:opacity, margin-left, margin-left;
+                    transition-duration:0.1s;
                     transition-timing-function: ease-in-out;
 
                 }
@@ -1485,7 +1484,7 @@ form {
                     opacity: 1;
                     visibility: visible;
                     overflow: visible;
-                    margin-left: 30px;
+                    margin-left: 40px;
                 }
             }
         }
